fixed na overflow

--- a/styles.css
+++ b/styles.css
@@ -27,7 +27,7 @@
 }
 
 #home{
-  margin-top: 3em;
+  margin-top: 5em;
 }
 
 figurecaption{
